fix(user): address assistant review findings